--- a/.watching.md
+++ b/.watching.md
@@ -4,7 +4,9 @@ title: Watching
 permalink: /watching/
 ---
 
+<Center>
 <a target="_blank" href="https://trakt.tv/users/atrion"><img width="500" height="321" alt="Atrion" src="https://widgets.trakt.tv/users/d444161ecf59e26ffcf8eadca5757d18/watched/thumb@1x.jpg" /></a>
+</Center>
 
 
   {% include advertisements.html %}
