--- a/_posts/365days/01-Jan/.2018-01-17-Day-17-What-are-you-grateful-for.md
+++ b/_posts/365days/01-Jan/.2018-01-17-Day-17-What-are-you-grateful-for.md
@@ -6,3 +6,9 @@ author: Atrion Darnay
 categories: 365days
 permalink: 365days/Day-17-What-are-you-grateful-for.html  
 ---
+
+  I'm Greatful really for all that I have. Sometimes I complain, or bitch about this or that, but when it comes down to it I know that I have it a fair bit better than others.
+  
+  I might loose sight of it sometimes when things dont go the way I would like or hope, but I am grateful for everything from the Woman I am with to the food we eat or the car and phone and computers and all other possessions that we use on a daily basis.
+  
+  
