Update and rename _posts/vape/2018-04-24-Test-File.md to _posts/vaping/2018-04-24-Test-File.md

--- a/_posts/vaping/2018-04-24-Test-File.md
+++ b/_posts/vaping/2018-04-24-Test-File.md
@@ -3,8 +3,8 @@ layout: post
 title:  "Test File"  
 date:   2018-04-24 07:00:00  
 author: Atrion Darnay  
-categories: vape
-permalink: /vape/Test_File.html  
+categories: vaping
+permalink: /vaping/Test_File.html  
 ---
 
   These Files are for a RetroPie Setup on a Raspberry pi.
