Update and rename _posts/vape/2018-04-26-LG-HG2.md to _posts/vaping/2018-04-26-LG-HG2.md

--- a/_posts/vaping/2018-04-26-LG-HG2.md
+++ b/_posts/vaping/2018-04-26-LG-HG2.md
@@ -3,8 +3,8 @@ layout: post
 title:  "LG HG2"  
 date:   2018-04-26 03:00:00  
 author: Atrion Darnay  
-categories: vape
-permalink: /vape/LG_HG2.html  
+categories: vaping
+permalink: /vaping/LG_HG2.html  
 ---
 
 | <span style="font-weight:bold">Brand:</span> LG Chem<br/><span style="font-weight:bold">Model:</span> HG2<br/><span style="font-weight:bold">Size:</span> 18650<br/><span style="font-weight:bold">Nominal Capacity:</span> 3000mAh<br/><span style="font-weight:bold">Nominal Voltage:</span> 3.6V<br/><span style="font-weight:bold">Maximum Voltage:</span> 4.2V<br/><span style="font-weight:bold">Discharge Current:</span> 20A Maximum Continuous<br/><span style="font-weight:bold">Style:</span> Flat Top<br/><span style="font-weight:bold">Protected:</span> NO, UNPROTECTED<br/><span style="font-weight:bold">Approximate Dimensions:</span> 18.35mm x 64.94mm<br/><span style="font-weight:bold">Approximate Weight:</span> 47g<br/> |  |  | <img src="/assets/vape/lg_hg2.jpg" alt="LG HG2" style="width: 300px"/> |
